--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,18 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a mordern twist."
+    />
+    <meta
+      name="og:title" content="Little Lemon"
+    />
+    <meta
+      name="og:description"
+      content="We are a family owned Mediterranean restaurant, focused on traditional recipes served with a mordern twist."
+    />
+    <meta
+      name="og:image"
+      content="../src/assets/logo.svg"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -39,5 +50,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script> -->
   </body>
 </html>
